# rust-exercises

./: .gitignore  README.md
todo-list/: Cargo.toml  README.md  task.md  todo-1729246045.json  todo-1729246248.json  todo-1729284651.json
todo-list/src/: main.rs
twitter_bot/: Cargo.toml  task.md
twitter_bot/src/: main.rs
weather-app/: Cargo.toml  README.md  demo.mov
weather-app/src/: app.rest  main.rs
