[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
error-chain = "0.12.4"
figlet-rs = "0.1.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
table_print = "0.1.0"
tokio = { version = "1.40.0", features = ["full"]}
